# quro-doc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/schemas/: add-doc-metadata.json  add-doc.json  inspect_protocol.schema.json  scoring.schema.json  standard_view.schema.json  vector_protocol.schema.json  view_protocol.schema.json
docs/skills/docs/: architecture.md  dataflow.md  entity-model.md
docs/skills/explore/: SKILL-cn.md  SKILL.md
docs/skills/skills/: quro-doc-agent.md  quro-doc-designer.md  quro-doc-developer.md  quro-doc-maintainer.md  quro-doc-materialize.md
scripts/: quro-add-doc  quro-search  quro-worker
src/quro_doc/: __init__.py  api.py  config.py  hermes_api.py  model.py  storage.py  storage_layer.py
src/quro_doc/adapters/: haystack_adapter.py
src/quro_doc/alignment/: cli.py  re_resolver.py  scanner.py  store.py
src/quro_doc/artifacts/: feature_extractor.py  provenance.py  schema.py  store.py  supersession.py
src/quro_doc/cli/: __init__.py  add.py  get.py  hermes_mcp.py  materialize.py  mcp.py  not_what_is.py  okf.py  search.py  vec.py
src/quro_doc/events/: __init__.py  store.py
src/quro_doc/ext/: __init__.py  inspector.py  reader.py  writer.py
src/quro_doc/feedback/: aggregator.py  cli.py  model.py  store.py
src/quro_doc/helpers/: __init__.py  asset_promise.py
src/quro_doc/materializers/: __init__.py  aria2_crawler.py  aria2_materializer.py  http_crawler.py
src/quro_doc/okf/: __init__.py  export.py  ingest.py  parser.py  scanner.py  source.py
src/quro_doc/parsers/: __init__.py  markdown_parser.py
src/quro_doc/pipelines/: index_pipeline.py  materialize_pipeline.py  query_pipeline.py
src/quro_doc/prompts/: __init__.py  canonical_questions.j2  extract_tags.j2  not_what_is.j2  supplement_answer.j2
src/quro_doc/protocols/: __init__.py  crawler.py  validator.py
src/quro_doc/ranking/: policy.py
(+43 files in other folders)
