[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quro-doc"
version = "0.2.0"
description = "Lightweight Cognitive Document System — LLM inference cache layer"
readme = "README.md"
license = {text = "Unlicense"}
authors = [
    {name = "quro"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "haystack-ai>=2.0.0",
    "haystack-experimental>=0.19.0",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=1.0.0",
    "jinja2>=3.0.0",
    "faiss-cpu>=1.10.0",
    "PyYAML>=6.0",
    "tqdm>=4.0.0",
    "sse-starlette>=1.0.0",
    "filetype>=1.0.0",
    "more-itertools>=10.0.0",
    "numpy>=1.26.0",
    "tenacity>=8.0.0",
    "requests>=2.31.0",
    "jsonschema>=4.20.0",
    "python-dateutil>=2.8.0",
    "mistune>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
redis = [
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/quro-community/quro-doc"

[project.scripts]
quro-doc = "quro_doc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quro_doc = ["templates/*.j2", "protocols/schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
